* The calendar board index icon in some cases was positioned too low. (forum.css) [Bug 2603]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@7801 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/forum.css
+++ b/Themes/default/css/forum.css
@@ -108,6 +108,7 @@ table.boardsframe p.children
 	margin-left: 3%;
 	padding: 0.3em;
 	border-left: solid #a0a0a0 1px;
+	min-height: 25px;
 }
 /* recent posts - or just one recent post */
 dl#infocenter_recentposts
